# Clove

./: CMakeLists.txt  Clove.sln  README.md
Clove/: CMakeLists.txt  Character.h  Clove.cpp  Clove.h  Clove.vcxproj  Clove.vcxproj.filters  Drawable.h  FileSystem.h  InputHandlers.cpp  InputHandlers.h  Objects.h  Pointers.h  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  Shaders.cpp  Shaders.h  Square.cpp  Square.h  Vertex.h  WindowSettings.h  fragment.fs  glad.c  vertex.vs
Clove/Clove Documentation/docs/: class_drawable-members.html  class_rectangle-members.html  class_rectangle.js  menudata.js
Clove/Clove Documentation/html/: _clove_8h_source.html  _rectangle_8h_source.html  _square_8h_source.html  _window_settings_8h_source.html  annotated_dup.js  class_drawable.html  class_drawable.js  class_e_b_o-members.html  class_objects-members.html  class_objects.html  class_rectangle.html  class_shaders.html  (+17 more)
Clove/html/: _objects_8h_source.html  class_square-members.html  hierarchy.js  navtreedata.js
build-linux/: CMakeCache.txt
docs/: _drawable_8h_source.html  _shaders_8h_source.html  annotated.html  class_e_b_o.html  class_shaders.js  functions_func.html  hierarchy.html  struct_input_pointers-members.html
docs/html/: _input_handlers_8h_source.html  _pointers_8h_source.html  _renderer_8h_source.html  index.html  navtreeindex0.js
docs/latex/: _drawable_8h_source.tex  _renderer_8h_source.tex  _window_settings_8h_source.tex  class_drawable.eps  class_shaders.tex  class_square.tex  struct_window_settings.tex
docs/search/: all_a.js  functions_6.js  variables_6.js
(+51 files in other folders)
